# L310_capture_the_flag

./: CMakeLists.txt  package.xml  plans.txt  requirements.txt  setup.py  task.txt
launch/: bot.launch  bot_all.launch  gazebo_simple.launch  gmapping.rviz  slam.launch  slam_all.launch
models/simple_world/: model.sdf
scripts/: constants.py  exploring.py  main.py  plot_paths.py  potential_field.py  robot_control.py  rrt.py  slam.py  test.py
scripts/path_log/: 1_0.json  2_0.json  2_1.json  3_0.json  3_1.json  3_2.json  4_0.json  4_1.json  4_2.json  4_3.json  5_0.json  5_1.json  5_2.json  5_3.json  5_4.json  6_0.json  6_1.json  6_2.json  6_3.json  6_4.json  6_5.json  7_0.json  7_1.json  7_2.json  7_3.json  7_4.json  7_5.json  7_6.json  8_0.json  8_1.json  8_2.json  8_3.json  8_4.json  8_5.json  8_6.json  8_7.json  9_0.json  9_1.json  9_2.json  9_3.json  (+5 more)
